# opendds_simple_pub-sub

./: .gitignore  CMakeLists.txt  DataReaderListener.cpp  DataReaderListener.h  DataReaderListenerImpl.cpp  Publisher.cpp  SmartCityTemperature.idl  Subscriber.cpp  generate_idl.sh  publisher.cpp  readme.md  subscriber.cpp
